# smartrobot-rpi

./: .gitattributes  .gitignore  Cargo.toml  README.md
.github/: FUNDING.yml
dev-book/: GStreamer.md  Project.md  README.md  WebRTC.md
dev-projects/candle-gemma/: Cargo.toml  README.md
dev-projects/candle-gemma/src/: main.rs
dev-projects/candle-llama/: Cargo.toml  README.md
dev-projects/candle-metavoice/: Cargo.toml  README.md
dev-projects/candle-metavoice/src/: main.rs  utils.rs
dev-projects/candle-paligemma/: .gitignore  Cargo.toml  README.md
dev-projects/candle-paligemma/.cargo/: config.toml
dev-projects/candle-paligemma/src/: main.rs  utils.rs
dev-projects/candle-parler-tts/: Cargo.toml  README.md
dev-projects/candle-phi/: Cargo.toml  README.md
dev-projects/candle-whisper/: Cargo.toml  README.md
dev-projects/candle-whisper/.cargo/: config.toml
dev-projects/candle-whisper/assets/: .gitattributes
dev-projects/candle-whisper/src/: main.rs  utils.rs
dev-projects/dioxus-app/: Cargo.toml
dev-projects/dioxus-app/src/: main.rs
dev-projects/gst-camera/: Cargo.toml  README.md
dev-projects/gst-camera/src/: main.rs
dev-projects/gst-mic/: Cargo.toml  README.md
dev-projects/gst-mic/src/: main.rs
dev-projects/gst-speaker/: Cargo.toml  README.md
dev-projects/gst-speaker/src/: main.rs
dev-projects/gst-webrtc/: .gitignore  Cargo.toml  README.md
dev-projects/gst-webrtc/gst-plugins/: README.md
dev-projects/gst-webrtc/pki/: README.md
dev-projects/gst-webrtc/src/: main.rs
dev-projects/gst-webrtc/web-app/: README.md  index.html
dev-projects/zenoh-messaging/: Cargo.toml  README.md
dev-projects/zenoh-messaging/src/: main.rs
