[package]
name = "candle-metavoice"
version = "0.0.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.97", features = ["backtrace"] }
candle-core = "0.8.3"
candle-nn = "0.8.3"
candle-transformers = "0.8.3"
clap = { version = "4.5.32", features = ["derive"] }
hf-hub = { version = "0.4.2", features = ["tokio"] }
rand = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokenizers = { version = "0.21.0", default-features = false, features = ["onig"] }
tracing = "0.1.41"
tracing-chrome = "0.7.2"
tracing-subscriber = "0.3.19"
