[package]
name = "candle-paligemma"
version = "0.0.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.96", features = ["backtrace"] }
candle-core = "0.8.3"
candle-nn = "0.8.3"
candle-transformers = "0.8.3"
clap = { version = "4.5.31", features = ["derive"] }
hf-hub = { version = "0.4.2", features = ["tokio"] }
image = { version = "0.25.5", default-features = false, features = ["jpeg", "png"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
tokenizers = { version = "0.21.0", default-features = false, features = ["onig"] }
tracing = "0.1.41"
tracing-chrome = "0.7.2"
tracing-subscriber = "0.3.19"
