[package]
name = "candle-whisper"
version = "0.0.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.98", features = ["backtrace"] }
byteorder = "1.5.0"
candle-core = "0.9.0"
candle-nn = "0.9.0"
candle-transformers = "0.9.0"
clap = { version = "4.5.37", features = ["derive"] }
hf-hub = { version = "0.4.2", features = ["tokio"] }
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
symphonia = { version = "0.5.4", features = ["all"] }
tokenizers = { version = "0.21.1", default-features = false, features = [
    "onig",
] }
tracing = "0.1.41"
tracing-chrome = "0.7.2"
tracing-subscriber = "0.3.19"
