[package]
name = "gst-mic"
version = "0.0.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.98", features = ["backtrace"] }
clap = { version = "4.5.37", features = ["derive"] }
gstreamer = { version = "0.23.5", features = ["v1_22"] }
tracing = "0.1.41"
tracing-chrome = "0.7.2"
tracing-subscriber = "0.3.19"
